--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <div id="encabezado" class="container">
     <div class="row">
       <div class="col-sm-8">
-        <div id="estado" class="alert alert-primary">Toca empezar para comenzar el juego</div>
+        <div id="estado" class="alert alert-primary">Tocá "empezar" para comenzar el juego</div>
       </div>
       <div class="col-sm-2">
-        <p>Ronda # <strong id="ronda"></strong></p>
+        <p>Ronda # <strong id="ronda">-</strong></p>
       </div>
       <div class="col-sm-2">
         <button id="empezar" class="btn btn-primary">Empezar</button>
@@ -32,5 +32,6 @@
       <div id="cuadro-4" class="cuadro col"></div>
     </div>
   </div>
+  <script src="js/script.js"></script>
 </body>
 </html>
